--- a/.github/workflows/deploybycopy.yml
+++ b/.github/workflows/deploybycopy.yml
@@ -4,15 +4,19 @@ on:
   push:
     branches:
       - dev
+  pull_request:
+    branches:
+      - dev
+    types:
+      - closed
 
 jobs:
   deploy:
-    name: Deploy Code to EC2
+    if: github.event.pull_request.merged == true || github.event_name == 'push'
     runs-on: ubuntu-latest
-    if: github.event.before != github.event.after && github.event.pusher.name != ''
-    
+
     steps:
-    - name: Checkout Code
+    - name: Checkout code
       uses: actions/checkout@v3
 
     - name: Set up SSH key
@@ -24,5 +28,5 @@ jobs:
       run: |
         rsync -avz -e "ssh -i key.pem -o StrictHostKeyChecking=no" ./ ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/home/${{ secrets.EC2_USER }}/dev-code
 
-    - name: Cleanup SSH key
+    - name: Cleanup
       run: rm -f key.pem
