--- a/.github/workflows/deploybycopy.yml
+++ b/.github/workflows/deploybycopy.yml
@@ -3,10 +3,10 @@ name: Deploy to EC2 on dev merge
 on:
   push:
     branches:
-      - dev
+      - main
   pull_request:
     branches:
-      - dev
+      - main
     types:
       - closed
 
@@ -26,7 +26,7 @@ jobs:
 
     - name: Copy code to EC2
       run: |
-        rsync -avz -e "ssh -i key.pem -o StrictHostKeyChecking=no" ./ ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/home/${{ secrets.EC2_USER }}/dev-code
+        rsync -avz -e "ssh -i key.pem -o StrictHostKeyChecking=no" ./ ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/home/${{ secrets.EC2_USER }}/main-code
 
     - name: Cleanup
       run: rm -f key.pem
