--- a/.github/workflows/deploybycopy.yml
+++ b/.github/workflows/deploybycopy.yml
@@ -21,7 +21,7 @@ jobs:
 
     - name: Set up SSH key
       run: |
-        echo "${{ secrets.EC2_SSH_KEY }}" | base64 -d > key.pem
+        echo "${{ secrets.EC2_SSH_KEY }}" > key.pem
         chmod 600 key.pem
 
     - name: Copy code to EC2
