--- a/.github/workflows/deploybycopy.yml
+++ b/.github/workflows/deploybycopy.yml
@@ -1,9 +1,6 @@
-name: Deploy to EC2 on dev merge
+name: Deploy to EC2 on main merge
 
 on:
-  push:
-    branches:
-      - main
   pull_request:
     branches:
       - main
