--- a/.github/workflows/deploybycopy.yml
+++ b/.github/workflows/deploybycopy.yml
@@ -13,17 +13,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Set up SSH key
+    - name: Notify MS Teams
+      if: always()
       run: |
-        echo "${{ secrets.EC2_SSH_KEY }}" > key.pem
-        chmod 600 key.pem
-
-    - name: Copy code to EC2
-      run: |
-        rsync -avz -e "ssh -i key.pem -o StrictHostKeyChecking=no" ./ ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/home/${{ secrets.EC2_USER }}/main-code
-
-    - name: Cleanup
-      run: rm -f key.pem
+        STATUS="${{ job.status }}"
+        MESSAGE=" Deployment Status: $STATUS**  \n\
+        **🔀 Branch:** \`${{ github.ref_name }}\`  \n\
+        **🔨 Commit:** \`${{ github.sha }}\`  \n\
+        **👤 Triggered by:** ${{ github.actor }}  \n\
+        **📝 Commit Message:** ${{ github.event.head_commit.message }}  \n\
+        **🕒 Time:** $(date '+%Y-%m-%d %H:%M:%S')  \n\
+        **📁 Repository:** [${{ github.repository }}](https://github.com/${{ github.repository }})"
+        curl -H 'Content-Type: application/json' \
+          -d '{"text": "🚀 Deployment started for `${{ github.repository }}` by `${{ github.actor }}`"}' \
+          ${{ secrets.MS_TEAMS_WEBHOOK_URL }}
