--- a/.github/workflows/deploybycopy.yml
+++ b/.github/workflows/deploybycopy.yml
@@ -18,6 +18,9 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
+    - name: 📂 List files after checkout
+      run: ls -la
+      
     - name: Make deploy/rollback scripts executable
       run: |
         chmod +x ./deploy.sh
