--- a/.github/workflows/deploybycopy.yml
+++ b/.github/workflows/deploybycopy.yml
@@ -13,25 +13,22 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: Prod
+    env:
+      EC2_SSH_KEY: ${{ secrets.EC2_SSH_KEY }}
+      EC2_USER: ${{ secrets.EC2_USER }}
+      EC2_HOST: ${{ secrets.EC2_HOST }}        
+              
     steps:
-    
+   
     - name: Checkout code
       uses: actions/checkout@v3
 
     - name: List files after checkout
       run: ls -la
+
+    - name: 🔑 Make deploy.sh executable
+      run: chmod +x ./testapp/deploy.sh      
       
-    - name: Make deploy/rollback scripts executable
-      run: |
-        export EC2_SSH_KEY="${{ secrets.EC2_SSH_KEY }}"
-        export EC2_USER="${{ secrets.EC2_USER }}"
-        export EC2_HOST="${{ secrets.EC2_HOST }}"      
-        chmod +x ./testapp/deploy.sh
-      env:
-        EC2_SSH_KEY: ${{ secrets.EC2_SSH_KEY }}
-        EC2_USER: ${{ secrets.EC2_USER }}
-        EC2_HOST: ${{ secrets.EC2_HOST }}        
-        
     - name: Try Deploy (with retries)
       id: deploy
       run: |
