--- a/.github/workflows/deploybycopy.yml
+++ b/.github/workflows/deploybycopy.yml
@@ -16,12 +16,16 @@ jobs:
     env:
       EC2_SSH_KEY: ${{ secrets.EC2_SSH_KEY }}
       EC2_USER: ${{ secrets.EC2_USER }}
-      EC2_HOST: ${{ secrets.EC2_HOST }}        
+      EC2_HOST: ${{ secrets.EC2_HOST }}
+      EC2_PASSWORD: ${{ secrets.EC2_PASSWORD }}
               
     steps:
    
     - name: Checkout code
       uses: actions/checkout@v3
+
+    - name: Install sshpass
+      run: sudo apt-get update && sudo apt-get install -y sshpass      
 
     - name: List files after checkout
       run: ls -la
